--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.0.3
   http: ^0.13.3
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
